<resources>
    <string name="app_name">Two spies</string>

    <string name="txtTutorial">
        Для просмотра локации нажмите \"Далее\". После нужно нажать \"Скрыть\" и передать следующему
        игроку.
    </string>

    <string name="purposeGame">
        Цель шпиона: не раскрыть себя до окончания времени или определить локацию, в которой все
        игроки находятся. Цель др. игроков: указать кто является шпионом.
    </string>

    <string name="gameProgress">
        Первый игрок задает вопрос любому другому игроку, обращаясь к нему
        по имени: «Лиза, скажи мне…». Как правило, вопросы касаются загаданной локации: но это не
        обязательно. Вопрос задаётся один раз и без уточнений. Ответ может быть любым. После
        ответивший может задать вопрос любому другому игроку, кроме того, кто перед этим
        задал ему вопрос (т. е. нельзя спросить в ответ). Порядок опроса игроки выстроят сами – это
        будет зависеть от подозрений, основанных на вопросах и ответах. После того как время истечет
        происходит голосования за то, кто шпион.
    </string>

    <string name="playersStrategies">
        Задача игроков (если не шпион) – не только вычислить шпиона, но и постараться не выдать
        локацию. Поэтому, задавая вопросы, др. игрокам лучше избегать конкретных формулировок
        («Лиза, сколько забрали воры из кассы денег?» т. о. шпион сразу угадает локацию – банк). Но
        и совсем общих вопросов и ответов тоже давать не стоит: такого игрока могут заподозрить, что
        он шпион, и тогда настоящие шпионы победят. Задача шпиона – как можно внимательнее слушать
        чужие ответы, постараться не выдать себя и одновременно по возможности вычислить локацию до
        истечения времени. Шпион, ждущий конца раунда, рискует: что др. игроки (не шпионы),
        благодаря обсуждению и голосованию, его вычислят.
    </string>

    <string name="difficultyLevels">
        Легкий уровень сложности: почти всегда локация состоит из одного слова. Локации могут
        являться, странами, городами, местами в городах, местами в квартире, местами оказывающие
        какие-то услуги и т.п.
        Средний уровень сложности: чаще встречаются локации из двух слов и редко более. Локации
        являются популярными местами и не очень.
        Тяжелый уровень сложности: локации могут состоять из более двух слов. Локации могут быть
        местами из игр, фильмов, сериалов, мультиков и т.п.
    </string>
    <string name="further">Далее</string>
    <string name="hide">Скрыть</string>
    <string name="start_over">Начать заново</string>
    <string name="time">Время</string>
    <string name="number_of_players">Кол-во игроков</string>
    <string name="number_of_spies">Кол-во шпионов</string>
    <string name="playing_time">Время игры (м)</string>
    <string name="choose_difficulty_level">Выберите уровень сложности</string>
    <string name="rules">Правила</string>
    <string name="purpose_of_the_game">Цель игры</string>
    <string name="game_progress">Ход игры</string>
    <string name="players_challenges_and_strategies">Задачи и стратегии игроков</string>
    <string name="difficulty_levels">Уровни сложности</string>
    <string name="back">Назад</string>

    <string-array name="difficultyLevels">
        <item>Легкий</item>
        <item>Средний</item>
        <item>Тяжелый</item>
    </string-array>

    <string-array name="easy">
        <item>Бразилия</item>
        <item>Аргентина</item>
        <item>Колумбия</item>
        <item>Чили</item>
        <item>Уругвай</item>
        <item>Дупло</item>
        <item>Пещера чудес</item>
        <item>Ваканда</item>
        <item>Паб</item>
        <item>Бар</item>
        <item>Лас-вегас</item>
        <item>Нью-Йорк</item>
        <item>Киностудия</item>
        <item>Корпоратив</item>
        <item>Больница</item>
        <item>Ресторан</item>
        <item>Театр</item>
        <item>Поезд</item>
        <item>Кафе</item>
        <item>Казино</item>
        <item>Гостиница</item>
        <item>Самолёт</item>
        <item>Спа-салон</item>
        <item>Пляж</item>
        <item>Корабль</item>
        <item>Титаник</item>
        <item>Цирк</item>
        <item>Школа</item>
        <item>ПТУ</item>
        <item>Университет</item>
        <item>Институт</item>
        <item>Колледж</item>
        <item>Церковь</item>
        <item>Метро</item>
        <item>Сидней</item>
        <item>Торонто</item>
        <item>Вена</item>
        <item>Ванкувер</item>
        <item>Кухня</item>
        <item>Спальня</item>
        <item>Диван</item>
        <item>Лес</item>
        <item>Палатка</item>
        <item>Двор</item>
        <item>KFC</item>
        <item>Burger King</item>
        <item>McDonald’s</item>
        <item>Subway</item>
        <item>Лиссабон</item>
        <item>Токио</item>
        <item>Берлин</item>
        <item>Лондон</item>
        <item>МГУ</item>
        <item>Библиотека </item>
        <item>Колизей</item>
        <item>Вулкан</item>
        <item>Ивиса (Ибица)</item>
        <item>Зоопарк</item>
        <item>Парк</item>
        <item>Мальдивы</item>
        <item>Шахта</item>
        <item>Париж</item>
        <item>Набережная</item>
        <item>Припять</item>
        <item>Сталинград</item>
        <item>Ледокол</item>
        <item>Детройт</item>
        <item>Роттердам</item>
        <item>Лос-Анджелес </item>
        <item>Сибирь</item>
        <item>Тюрьма</item>
        <item>Солярий</item>
        <item>диснейленд</item>
    </string-array>
    <string-array name="middle">
        <item>Дом престарелых</item>
        <item>Полицейский участок</item>
        <item>Силиконовая долина</item>
        <item>Красная дорожка</item>
        <item>Сладкий музей</item>
        <item>Беверли хиллз</item>
        <item>Додо Пицца</item>
        <item>Пирамида Хеопса</item>
        <item>Великая китайская стена</item>
        <item>Гранд-Каньон</item>
        <item>Водопад Виктория</item>
        <item>Тадж-Махал</item>
        <item>Мачу-Пикчу</item>
        <item>Озеро Байкал</item>
        <item>Красное море</item>
        <item>Парк дисней</item>
        <item>Великий Новгород</item>
        <item>Белый сад</item>
        <item>Развлекательный парк</item>
        <item>Угольная шахта</item>
        <item>Лазурный берег</item>
        <item>Пирамиды Гизы </item>
        <item>Амазонские джунгли</item>
        <item>Нетландия</item>
    </string-array>

    <string-array name="hard">
        <item>Планетарный потрошитель «Ишимура»</item>
        <item>Город Сайлент Хилл</item>
        <item>Готэм-Сити</item>
        <item>Либерти-Сити</item>
        <item>Город Рейвенхолм</item>
        <item>Некрополис</item>
        <item>Вечеринка Мясного короля</item>
        <item>Особняк Спенсера</item>
        <item>Замок Бренненбург</item>
        <item>Мост золотые ворота</item>
        <item>Клоунский бордель</item>
        <item>Яхта Ван Гога</item>
        <item>Остров проклятых</item>
        <item>Дом великана</item>
        <item>Диван Обломова</item>
        <item>Очередь в столовку</item>
        <item>Завод кукол барби</item>
        <item>Тридевятое царство</item>
        <item>Пицца Папа Джонс</item>
        <item>Замок Бран</item>
        <item>Висячие сады Семирамиды</item>
        <item>Статуя Зевса в Олимпии</item>
        <item>Храм Артемиды Эфесской </item>
        <item>Мавзолей в Галикарнасе</item>
        <item>Александрийский маяк</item>
        <item>Национальный парк Столовая гора</item>
        <item>Бухта Халонг</item>
        <item>Остров Чеджу</item>
        <item>Большой Барьерный риф</item>
        <item>Гавань Рио-де-Жанейро</item>
        <item>Джомолунгма (Эверест)</item>
        <item>Вулкан Парикутин</item>
        <item>Белизский Барьерный риф</item>
        <item>Большой Барьерный риф</item>
        <item>Галапагосские острова</item>
        <item>Заброшенный парк дисней</item>
        <item>Новиград</item>
        <item>Каэр Морхен</item>
        <item>Острова Скеллиге</item>
        <item>Драконья долина</item>
        <item>Магазин игрушек «Конь-огонь»</item>
        <item>Город Големов</item>
        <item>Каспийская 45</item>
    </string-array>
</resources>
